--- a/package.json
+++ b/package.json
@@ -8,8 +8,9 @@
     "autoprefixer": "^9.5.1",
     "browser-sync": "^2.26.7",
     "del": "^5.0.0",
-    "gulp": "4.0.x",
+    "gulp": "^4.0.2",
     "gulp-csso": "^3.0.1",
+    "gulp-htmlmin": "^5.0.1",
     "gulp-imagemin": "^6.0.0",
     "gulp-plumber": "1.2.x",
     "gulp-postcss": "8.0.x",
@@ -29,7 +30,9 @@
     "stylelint": "stylelint \"source/sass/**/*.scss\" --syntax scss",
     "test": "npm run editorconfig && npm run stylelint",
     "build": "gulp build",
-    "start": "gulp start"
+    "start": "gulp start",
+    "min": "gulp minify-html",
+    "incl": "gulp html"
   },
   "browserslist": [
     "last 2 versions",
