--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "gulp-sass": "4.0.x",
     "gulp-sourcemaps": "2.6.x",
     "gulp-svgstore": "^7.0.1",
+    "gulp-uglify": "^3.0.2",
     "gulp-webp": "^4.0.1",
     "node-normalize-scss": "^8.0.1",
     "posthtml-include": "^1.2.0",
@@ -32,6 +33,7 @@
     "build": "gulp build",
     "start": "gulp start",
     "min": "gulp minify-html",
+    "minjs": "gulp minify-js",
     "incl": "gulp html"
   },
   "browserslist": [
