--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "gulp-uglify": "^3.0.2",
     "gulp-webp": "^4.0.1",
     "node-normalize-scss": "^8.0.1",
+    "pixel-glass": "^1.0.13",
     "posthtml-include": "^1.2.0",
     "stylelint": "^10.1.0",
     "stylelint-config-htmlacademy": "0.1.x"
